# Mac-Access-API-

./: .env.example  Makefile  README.md  pyproject.toml
launchd/: com.macaccess.api.plist
mac_access_api/: __init__.py  config.py  main.py  models.py  scheduler.py  security.py  services.py
scripts/: bootstrap.sh  install.sh  install_launchd.sh  run_server.sh
tests/: test_api.py
